remove all ui shit add pytest and cov

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,13 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "flask>=3.1.2",
+    "pytz>=2025.2",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+    "pytest-cov>=7.0.0",
+]
+[tool.pytest.ini_options]
+addopts = "--maxfail=1 --cov=."
