--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "pre-commit>=4.3.0",
+    "pylint>=4.0.2",
     "pytest>=8.4.2",
     "pytest-cov>=7.0.0",
 ]
