add script to clear data on commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,3 +17,10 @@ repos:
     rev: 5.13.2
     hooks:
       - id: isort
+-   repo: local
+    hooks:
+      - id: clean-data
+        name: Clean Data
+        entry: ./scripts/clean_data.sh
+        language: system
+        types: [python]
